deployments/pathweb/workloads/media-services/plex/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: media-services
spec:
  serviceName: plex-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      nodeSelector:
        node-group: baldric
      priorityClassName: rfhome-standard-node-specific
      containers:
      - name: server
        image: plexinc/pms-docker:latest
        ports:
        - containerPort: 32400
          name: plex
        - containerPort: 8324
          name: plex-roku
        - containerPort: 32469
          name: plex-dlna
        - containerPort: 1900
          name: plex-upnp
          protocol: UDP
        - containerPort: 32410
          name: plex-gdm-1
          protocol: UDP
        - containerPort: 32412
          name: plex-gdm-2
          protocol: UDP
        - containerPort: 32413
          name: plex-gdm-3
          protocol: UDP
        - containerPort: 32414
          name: plex-gdm-4
          protocol: UDP
        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: tls-cert
          mountPath: /certs
          readOnly: true
        resources:
          requests:
            cpu: "600m"
            memory: "4Gi"
          limits:
            memory: "8Gi"
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media-smb
      - name: tls-cert
        secret:
          secretName: services-wildcard-cert
      - name: transcode
        nfs:
          server: 10.229.229.12
          path: /mnt/hdd/applications/plex
  persistentVolumeClaimRetentionPolicy:
    delete: Retain
  volumeClaimTemplates:
  - metadata:
      name: config
      labels:
        home.yrf.me/backup-to-okinawa-s3: "true"
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 10Gi
